assets/css/style.css
#title-area {
  margin: 0 auto;
  display: block;
  line-height: 96px;
  height: 96px;
  float: left;
}
#title {
  margin: 0 30px;
  background-color: #4aaaa5;
  padding: 0px 20px 0px 20px;
  color: #ffffff;
  text-align: center;
  font-family: Georgia, "Times New Roman", Times, serif;
  width: 45%;
}
.header {
  overflow: hidden;
  background-color: #ffffff;
  border-bottom: 2px solid #cccccc;
}
.wrap {
  width: 100%;
  margin: 0 auto;
  background-color: #ffffff;
}
#main-content {
  border: 1px solid #dddddd;
  padding: 25px;
  width: 910px;
  margin-top: 30px;
}

#main-content.wrap {
  margin-top: 0;
}

nav {
  margin: 0 30px;
  line-height: 96px;
  height: 96px;
  width: 35%;
  float: right;
  background-color: #ffffff;
  text-align: end;
}
ul {
  margin: 0 auto;
  padding-right: 0;
}
nav li {
  display: inline;

  padding-right: 0;
}
img#profile-image {
  float: left;
  margin: 20px 20px 20px 0;
  height: auto;
  width: 30%;
}
.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

a {
  text-decoration: none;
  font-family: Arial, Helvetica, sans-serif;
  color: #777777;
  padding: 0 20px 0 20px;
  border-left: 1px solid #dddddd;
}
#nav-start {
  border-left: 0;
}
.entire-content {
  background-image: url(../images/trees.png);
  /* background-image */
  margin: 0 auto;
  padding: 30px 0 90px 0;
}
.subtitle-area {
  border-bottom: 2px solid #cccccc;
}
.subtitle {
  color: #4aaaa5;
  font-family: Georgia, "Times New Roman", Times, serif;
  padding-left: 20px;
}
p {
  color: #777777;
  font-family: Arial, Helvetica, sans-serif;
}

footer {
  height: 50px;
  background-color: #666666;
  border-top: 8px solid #4aaaa5;
}

/* style for contact form */
input.inputform {
  width: 100%;
  height: 30px;
  border: 1px solid #cccccc;
}
input#message {
  height: 200px;
  margin-bottom: 10px;
}
p.label {
  margin-bottom: 0;
}
input.submit {
  background-color: #4aaaa5;
  padding: 10px 20px;
  color: #ffffff;
  font-size: 16px;
  font-family: Arial, Helvetica, sans-serif;
}

/* style for gallery image */
.gallery-image {
  height: 440px;
  width: 330px;
  margin: 40px 60px 0 0;
}
#summer,
#autumn2 {
  margin-right: 0;
}
.container-left,
.container-right {
  width: 50%;
  height: auto;
}
.gallery-image {
  width: 90%;
  height: auto;
}

.text-block {
  width: 90%;
}

/* put text on top of gallery image */
.container-left {
  position: relative;
  float: left;
}
.container-right {
  position: relative;
  float: right;
}

.text-block {
  position: absolute;
  bottom: 60px;
  background-color: #4aaaa5;
  padding: 0, 25px;
  color: #ffffff;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  width: 330px;
}

/* change text color when hovered */
a:hover {
  /* choose a close color with color wheel */
  color: #4ca8c2;
}
/* sticky footer*/
html,
body {
  height: 100%;
  margin: 0;
}
.wrapper {
  min-height: 100%;

  /* Equal to height of footer */
  /* But also accounting for potential margin-bottom of last child */
  margin-bottom: -50px;
}
.footer,
.push {
  height: 50px;
}

/* Small devices (portrait tablets and large phones, 640px and up) */
@media only screen and (min-width: 640px) and (max-width: 767px) {
  .wrap {
    width: 100%;
  }
  .header {
    width: 100%;
    margin: 0;
  }
  #title {
    width: 100%;
    margin: 0;
    padding: 0;
  }
  ul {
    padding: 0;
  }
  nav {
    width: 100%;
    margin: 0;
    float: none;
    text-align: center;
  }
  #title-area {
    float: none;
  }
  img#profile-image {
    float: none;
    width: 100%;
  }
  #main-content {
    border: 1px solid #dddddd;
    padding: 25px;
    width: 85%;
    margin: 0, auto;
  }
  .text-block {
    width: 100%;
  }
  .container-left,
  .container-right {
    float: none;
    margin: 0;
  }
  .gallery-image {
    width: 100%;
    height: auto;
  }
}
.container-right {
  display: flex;
  justify-content: flex-end;
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  #title-area {
    margin-right: 0;
  }
  #title {
    width: 70%;
  }
  nav {
    width: 50%;
    margin-left: 0;
  }
  .header {
    width: 100%;
    margin: 0;
  }
  #main-content {
    border: 1px solid #dddddd;
    padding: 25px;
    width: 85%;
    margin: 0, auto;
  }
  .text-block {
    width: 90%;
  }
}

/* Large devices (laptops/desktops, 980px and up) */
@media only screen and (min-width: 980px) {
  #main-content {
    border: 1px solid #dddddd;
    padding: 35px;
    width: 65%;
    margin: 30px;
  }
}

